# horosho_na_skladu

./: .gitignore  GIT_WORKFLOW.md  LICENSE  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
django_part/: Dockerfile  README.md  docker-entrypoint.sh  manage.py  pyproject.toml  requirements-django.txt
django_part/accounts/: admin.py  models.py  permissions.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
django_part/config/: settings.py  urls.py
django_part/fixtures/: initial_data.json
django_part/inventory/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
django_part/operations/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
django_part/orders/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
django_part/shared/: __init__.py  auth.py  config.py  db.py  error_handler.py  exceptions.py  models.py  routers.py  schemas.py  seed_blueprint.py
django_part/warehouse/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
fastapi_part/: .env.example  Dockerfile  README.md  config.py  database.py  dependencies.py  exceptions.py  main.py  pyproject.toml
fastapi_part/models/: sa_models.py
fastapi_part/routers/: mobile.py  optimizer.py  waves.py
fastapi_part/schemas/: mobile.py
fastapi_part/services/: mobile_service.py
fastapi_part/src/: main_fastapi.py
fastapi_part/tests/: test_mobile.py
flask_part/: .env.example  Dockerfile  README.md  pyproject.toml  wsgi.py
flask_part/app/: __init__.py  config.py  (+3 more)
(+31 files in other folders)
