[project]
name = "warehouse-flask"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-cors>=4.0",
    "flask-apscheduler>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyJWT>=2.8",
    "requests>=2.31",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
]
